/*
 * Copyright 2022 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';
package tracdap.config;

option java_package = "org.finos.tracdap.config";
option java_multiple_files = true;

import "tracdap/config/common.proto";


message GatewayConfig {

  map<string, string> config = 1;

  PlatformInfo platformInfo = 7;

  AuthenticationConfig authentication = 6;

  repeated GwRoute routes = 2;
  GwServiceMap services = 3;

  uint32 port = 4;
  uint32 idleTimeout = 5;
}


message GwRoute {

  string routeName = 1;
  GwProtocol routeType = 2;
  repeated GwProtocol protocols = 3;
  GwRestMapping restMapping = 4;

  GwMatch match = 5;
  GwTarget target = 6;
}

enum GwProtocol {
  PROTOCOL_NOT_SET = 0;
  HTTP = 1;
  GRPC = 2;
  GRPC_WEB = 3;
  REST = 4;
}

message GwMatch {

  string host = 1;
  string path = 2;
}

message GwTarget {

  string scheme = 1;
  string host = 2;
  uint32 port = 3;
  string path = 4;
}

enum GwRestMapping {

  REST_MAPPING_NOT_SET = 0;
  TRAC_META = 1;
  TRAC_DATA = 2;
  TRAC_ORCH = 3;
}

message GwServiceMap {

  GwService meta = 1;
  GwService data = 2;
  GwService orch = 3;
}

message GwService {

  repeated GwProtocol protocols = 1;
  GwTarget target = 2;
}
